--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,28 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  database: obs_development 
+  username: dan
+  password: vermillion86
+  encoding: utf8
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+test: &test
+  adapter: mysql2
+  database: obs_test
+  username: dan
+  password: vermillion86
+  encoding: utf8
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  database: obs_production
+  username: dan
+  password: vermillion86
+  encoding: utf8
+
+cucumber:
+  <<: *test
